特定のイベントを別コンテナに移す機能を作成。複数のイベントが複数保存されるバグを修正

--- a/samples/CustomerWebApi/appsettings.json
+++ b/samples/CustomerWebApi/appsettings.json
@@ -6,9 +6,11 @@
     }
   },
   "AggregateEventCosmosDbContainer": "events",
+  "AggregateEventCosmosDbContainerDissolvable": "dissolvableevents",
   "CosmosDbEndPointUrl": "***REMOVED***",
   "CosmosDbAuthorizationKey": "***REMOVED***",
   "CosmosDbDatabase": "CustomerDb",
   "CosmosDbContainer": "items",
+  "CosmosDbContainerDissolvable": "dissolvableitems",
   "AllowedHosts": "*"
 }
