--- a/src/Sekiban.EventSourcing/Sekiban.EventSourcing.csproj
+++ b/src/Sekiban.EventSourcing/Sekiban.EventSourcing.csproj
@@ -4,6 +4,13 @@
         <TargetFramework>net6.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <PackageId>JJ_Sekiban.EventSourcing</PackageId>
+    <Version>0.1.0</Version>
+    <Authors>J-Tech Group</Authors>
+    <Company>J-Tech-Japan</Company>
+    <PackageDescription>Sekiban - Event Sourcing Framework Core</PackageDescription>
+    <RepositoryUrl>https://github.com/J-Tech-Japan/JJ_Sekiban</RepositoryUrl>
+        
     </PropertyGroup>
 
     <ItemGroup>
