--- a/.github/workflows/packages.yml
+++ b/.github/workflows/packages.yml
@@ -29,9 +29,9 @@ jobs:
       run: |
         pushd ./src/Sekiban.EventSourcing
         dotnet pack --configuration Release
-        dotnet nuget push "bin/Release/Sekiban.EventSourcing.${{ github.event.release.name }}.nupkg" --api-key ${{TOMOHISA_PAT}} --source "github"
+        dotnet nuget push "bin/Release/Sekiban.EventSourcing.${REF##*/v}.nupkg" --api-key ${{TOMOHISA_PAT}} --source "github"
     - name: Pack Cosmos
       run: |
         pushd ./src/Sekiban.EventSourcing.CosmosInfraStracture
         dotnet pack --configuration Release
-        dotnet nuget push "bin/Release/Sekiban.EventSourcing.CosmosInfrastructure.${{ github.event.release.name }}.nupkg" --api-key ${{TOMOHISA_PAT}} --source "github"
+        dotnet nuget push "bin/Release/Sekiban.EventSourcing.CosmosInfrastructure.${REF##*/v}.nupkg" --api-key ${{TOMOHISA_PAT}} --source "github"
