Create simple multiple projection

--- a/samples/CustomerWebApi/appsettings.json
+++ b/samples/CustomerWebApi/appsettings.json
@@ -12,5 +12,18 @@
   "CosmosDbDatabase": "CustomerDb",
   "CosmosDbContainer": "items",
   "CosmosDbContainerDissolvable": "dissolvableitems",
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "UseHybridDefault": true,
+  "TakeSnapshotDefault": true,
+  "SnapshotFrequencyDefault": 80,
+  "SnapshotOffsetDefault": 15,
+  "SingleAggregateExceptions": [
+    {
+      "AggregateClassName": "Client",
+      "MakeSnapshots": false,
+      "UseHybrid": false,
+      "SnapshotByEachVersion": 1,
+      "SnapshotOffset": 2
+    }
+  ]
 }
