設定の階層化　まだマルチコネクションの実行は出来ていない

--- a/samples/CustomerWebApi/appsettings.json
+++ b/samples/CustomerWebApi/appsettings.json
@@ -5,25 +5,29 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AggregateEventCosmosDbContainer": "events",
-  "AggregateEventCosmosDbContainerDissolvable": "dissolvableevents",
-  "CosmosDbEndPointUrl": "***REMOVED***",
-  "CosmosDbAuthorizationKey": "***REMOVED***",
-  "CosmosDbDatabase": "CustomerDb",
-  "CosmosDbContainer": "items",
-  "CosmosDbContainerDissolvable": "dissolvableitems",
-  "AllowedHosts": "*",
-  "UseHybridDefault": true,
-  "TakeSnapshotDefault": true,
-  "SnapshotFrequencyDefault": 80,
-  "SnapshotOffsetDefault": 15,
-  "SingleAggregateExceptions": [
-    {
-      "AggregateClassName": "Client",
-      "MakeSnapshots": false,
-      "UseHybrid": false,
-      "SnapshotByEachVersion": 1,
-      "SnapshotOffset": 2
+  "Sekiban": {
+    "AggregateEventCosmosDbContainer": "events",
+    "AggregateEventCosmosDbContainerDissolvable": "dissolvableevents",
+    "CosmosDbEndPointUrl": "***REMOVED***",
+    "CosmosDbAuthorizationKey": "***REMOVED***",
+    "CosmosDbDatabase": "CustomerDb",
+    "CosmosDbContainer": "items",
+    "CosmosDbContainerDissolvable": "dissolvableitems",
+    "Aggregates": {
+      "UseHybridDefault": true,
+      "TakeSnapshotDefault": true,
+      "SnapshotFrequencyDefault": 80,
+      "SnapshotOffsetDefault": 15,
+      "SingleAggregateExceptions": [
+        {
+          "AggregateClassName": "Client",
+          "MakeSnapshots": false,
+          "UseHybrid": false,
+          "SnapshotByEachVersion": 1,
+          "SnapshotOffset": 2
+        }
+      ]
     }
-  ]
+  },
+  "AllowedHosts": "*"
 }
