複数拠点の接続を許可する

--- a/samples/CustomerWebApi/appsettings.json
+++ b/samples/CustomerWebApi/appsettings.json
@@ -6,27 +6,20 @@
     }
   },
   "Sekiban": {
-    "AggregateEventCosmosDbContainer": "events",
-    "AggregateEventCosmosDbContainerDissolvable": "dissolvableevents",
-    "CosmosDbEndPointUrl": "***REMOVED***",
-    "CosmosDbAuthorizationKey": "***REMOVED***",
-    "CosmosDbDatabase": "CustomerDb",
-    "CosmosDbContainer": "items",
-    "CosmosDbContainerDissolvable": "dissolvableitems",
-    "Aggregates": {
-      "UseHybridDefault": true,
-      "TakeSnapshotDefault": true,
-      "SnapshotFrequencyDefault": 80,
-      "SnapshotOffsetDefault": 15,
-      "SingleAggregateExceptions": [
-        {
-          "AggregateClassName": "Client",
-          "MakeSnapshots": false,
-          "UseHybrid": false,
-          "SnapshotByEachVersion": 1,
-          "SnapshotOffset": 2
-        }
-      ]
+    "Default": {
+      "AggregateEventCosmosDbContainer": "events",
+      "AggregateEventCosmosDbContainerDissolvable": "dissolvableevents",
+      "CosmosDbEndPointUrl": "***REMOVED***",
+      "CosmosDbAuthorizationKey": "***REMOVED***",
+      "CosmosDbDatabase": "CustomerDb",
+      "CosmosDbContainer": "items",
+      "CosmosDbContainerDissolvable": "dissolvableitems",
+      "Aggregates": {
+        "UseHybridDefault": true,
+        "TakeSnapshotDefault": true,
+        "SnapshotFrequencyDefault": 80,
+        "SnapshotOffsetDefault": 15
+      }
     }
   },
   "AllowedHosts": "*"
