--- a/.github/workflows/run_test.yml
+++ b/.github/workflows/run_test.yml
@@ -6,10 +6,14 @@ on:
     branches: [ main ]
     paths:
       - "src/**"
+      - "test/**"
+      - "samples/**"
   pull_request:
     branches: [ main ]
     paths:
       - "src/**"
+      - "test/**"
+      - "samples/**"
 
 jobs:
   build:
