--- a/src/Sekiban.EventSourcing.CosmosInfrastracture/Sekiban.EventSourcing.CosmosInfrastructure.csproj
+++ b/src/Sekiban.EventSourcing.CosmosInfrastracture/Sekiban.EventSourcing.CosmosInfrastructure.csproj
@@ -6,13 +6,13 @@
         <Nullable>enable</Nullable>
         <RootNamespace>CosmosInfrastructure</RootNamespace>
         <PackageId>JJ_Sekiban.EventSourcing.CosmosInfrastructure</PackageId>
-        <Version>0.3.14</Version>
+        <Version>0.3.15</Version>
         <Authors>J-Tech Group</Authors>
         <Company>J-Tech-Japan</Company>
         <PackageDescription>Sekiban - Event Sourcing Framework CosmosInfrastructure</PackageDescription>
         <RepositoryUrl>https://github.com/J-Tech-Japan/JJ_Sekiban</RepositoryUrl>
-        <PackageVersion>0.3.14</PackageVersion>
-        <Description>TransferableAggregateBase.AddAndApplyEvent をSealedに変更</Description>
+        <PackageVersion>0.3.15</PackageVersion>
+        <Description>Change, Create時に、イベントおよび、スナップショットのJSON対応に関してテストするように変更しました。</Description>
     </PropertyGroup>
 
     <ItemGroup>
