--- a/src/Sekiban.EventSourcing/Sekiban.EventSourcing.csproj
+++ b/src/Sekiban.EventSourcing/Sekiban.EventSourcing.csproj
@@ -5,13 +5,13 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <PackageId>JJ_Sekiban.EventSourcing</PackageId>
-        <Version>0.3.14</Version>
+        <Version>0.3.15</Version>
         <Authors>J-Tech Group</Authors>
         <Company>J-Tech-Japan</Company>
         <PackageDescription>Sekiban - Event Sourcing Framework Core</PackageDescription>
         <RepositoryUrl>https://github.com/J-Tech-Japan/JJ_Sekiban</RepositoryUrl>
-        <PackageVersion>0.3.14</PackageVersion>
-        <Description>TransferableAggregateBase.AddAndApplyEvent をSealedに変更</Description>
+        <PackageVersion>0.3.15</PackageVersion>
+        <Description>Change, Create時に、イベントおよび、スナップショットのJSON対応に関してテストするように変更しました。</Description>
 
     </PropertyGroup>
 
