プレリリース準備

--- a/src/Sekiban.EventSourcing.CosmosInfrastracture/Sekiban.EventSourcing.CosmosInfrastructure.csproj
+++ b/src/Sekiban.EventSourcing.CosmosInfrastracture/Sekiban.EventSourcing.CosmosInfrastructure.csproj
@@ -6,13 +6,13 @@
         <Nullable>enable</Nullable>
         <RootNamespace>CosmosInfrastructure</RootNamespace>
         <PackageId>JJ_Sekiban.EventSourcing.CosmosInfrastructure</PackageId>
-        <Version>0.4.2</Version>
+        <Version>0.4.3</Version>
         <Authors>J-Tech Group</Authors>
         <Company>J-Tech-Japan</Company>
         <PackageDescription>Sekiban - Event Sourcing Framework CosmosInfrastructure</PackageDescription>
         <RepositoryUrl>https://github.com/J-Tech-Japan/JJ_Sekiban</RepositoryUrl>
-        <PackageVersion>0.4.2</PackageVersion>
-        <Description>集約およびDtoがIAggregateContentsを共有する、EventPayload、ドキュメントのイミュータブル、ChangedEventからAggregateIdを削除。[0.3以前の集約からのデータ及び記法が変わります。データのリセットをお願いします。]</Description>
+        <PackageVersion>0.4.3</PackageVersion>
+        <Description>集約およびDtoがIAggregateContentsを共有する、EventPayload、ドキュメントのイミュータブル、ChangedEventからAggregateIdを削除。CreateCommandでコンストラクタを使わない形に変更[0.3以前の集約からのデータ及び記法が変わります。データのリセットをお願いします。]</Description>
     </PropertyGroup>
 
     <ItemGroup>
