--- a/src/Sekiban.WebHelper/Sekiban.WebHelper.csproj
+++ b/src/Sekiban.WebHelper/Sekiban.WebHelper.csproj
@@ -5,15 +5,24 @@
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
         <OutputType>Library</OutputType>
+        <RootNamespace>Sekiban.WebHelper</RootNamespace>
+        <PackageId>JJ_Sekiban.WebHelper</PackageId>
+        <Version>0.4.10</Version>
+        <Authors>J-Tech Group</Authors>
+        <Company>J-Tech-Japan</Company>
+        <PackageDescription>Sekiban - Event Sourcing Framework WebHelper</PackageDescription>
+        <RepositoryUrl>https://github.com/J-Tech-Japan/JJ_Sekiban</RepositoryUrl>
+        <PackageVersion>0.4.10</PackageVersion>
+        <Description>ChangeコマンドのExecuteからAggregateIdを削除</Description>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3"/>
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Sekiban.EventSourcing.CosmosInfrastracture\Sekiban.EventSourcing.CosmosInfrastructure.csproj" />
-      <ProjectReference Include="..\Sekiban.EventSourcing\Sekiban.EventSourcing.csproj" />
+        <ProjectReference Include="..\Sekiban.EventSourcing.CosmosInfrastracture\Sekiban.EventSourcing.CosmosInfrastructure.csproj"/>
+        <ProjectReference Include="..\Sekiban.EventSourcing\Sekiban.EventSourcing.csproj"/>
     </ItemGroup>
 
 </Project>
