--- a/src/Sekiban.EventSourcing.WebHelper/Sekiban.EventSourcing.WebHelper.csproj
+++ b/src/Sekiban.EventSourcing.WebHelper/Sekiban.EventSourcing.WebHelper.csproj
@@ -7,13 +7,13 @@
         <OutputType>Library</OutputType>
         <RootNamespace>Sekiban.EventSourcing.WebHelper</RootNamespace>
         <PackageId>JJ_Sekiban.EventSourcing.WebHelper</PackageId>
-        <Version>0.4.15</Version>
+        <Version>0.4.16</Version>
         <Authors>J-Tech Group</Authors>
         <Company>J-Tech-Japan</Company>
         <PackageDescription>Sekiban - Event Sourcing Framework WebHelper</PackageDescription>
         <RepositoryUrl>https://github.com/J-Tech-Japan/JJ_Sekiban</RepositoryUrl>
-        <PackageVersion>0.4.15</PackageVersion>
-        <Description>WebHelperの機能追加および、メモリキャッシュ、更新マーカーによるクエリの高速化</Description>
+        <PackageVersion>0.4.16</PackageVersion>
+        <Description>WebHelperの機能追加、オーバーライド可能にする</Description>
     </PropertyGroup>
 
     <ItemGroup>
