--- a/samples/CustomerWebApi/CustomerWebApi.csproj
+++ b/samples/CustomerWebApi/CustomerWebApi.csproj
@@ -17,4 +17,8 @@
         <ProjectReference Include="..\ESSampleProjectDependency\ESSampleProjectDependency.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Controllers\Bases" />
+    </ItemGroup>
+
 </Project>
