WebHelperに認証を宣言的に設定できる機能を追加

--- a/src/Sekiban.EventSourcing/Sekiban.EventSourcing.csproj
+++ b/src/Sekiban.EventSourcing/Sekiban.EventSourcing.csproj
@@ -5,13 +5,13 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <PackageId>JJ_Sekiban.EventSourcing</PackageId>
-        <Version>0.4.18</Version>
+        <Version>0.4.19</Version>
         <Authors>J-Tech Group</Authors>
         <Company>J-Tech-Japan</Company>
         <PackageDescription>Sekiban - Event Sourcing Framework Core</PackageDescription>
         <RepositoryUrl>https://github.com/J-Tech-Japan/JJ_Sekiban</RepositoryUrl>
-        <PackageVersion>0.4.18</PackageVersion>
-        <Description>WebHelperバグ修正</Description>
+        <PackageVersion>0.4.19</PackageVersion>
+        <Description>WebHelperに認証を宣言的に設定できる機能を追加</Description>
 
     </PropertyGroup>
 
