テナント追加中

--- a/samples/CustomerWebApi/CustomerWebApi.csproj
+++ b/samples/CustomerWebApi/CustomerWebApi.csproj
@@ -11,6 +11,7 @@
     </ItemGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\..\Sekiban.EventSourcing.Addon.Tenant\Sekiban.EventSourcing.Addon.Tenant.csproj" />
         <ProjectReference Include="..\..\src\Sekiban.EventSourcing.CosmosInfrastracture\Sekiban.EventSourcing.CosmosInfrastructure.csproj" />
         <ProjectReference Include="..\..\src\Sekiban.EventSourcing.WebHelper\Sekiban.EventSourcing.WebHelper.csproj" />
         <ProjectReference Include="..\CustomerDomainContext\CustomerDomainContext.csproj" />
@@ -18,7 +19,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Controllers\Bases" />
+      <Folder Include="Controllers" />
     </ItemGroup>
 
 </Project>
