--- a/samples/CustomerWebApi/appsettings.json
+++ b/samples/CustomerWebApi/appsettings.json
@@ -7,18 +7,19 @@
   },
   "Sekiban": {
     "Default": {
-      "AggregateEventCosmosDbContainer": "events",
+      "AggregateEventCosmosDbContainer": "testevents",
       "AggregateEventCosmosDbContainerDissolvable": "dissolvableevents",
       "CosmosDbEndPointUrl": "***REMOVED***",
       "CosmosDbAuthorizationKey": "***REMOVED***",
       "CosmosDbDatabase": "CustomerDb",
-      "CosmosDbContainer": "items",
+      "CosmosDbContainer": "testitems",
       "CosmosDbContainerDissolvable": "dissolvableitems",
       "Aggregates": {
         "UseHybridDefault": true,
         "TakeSnapshotDefault": true,
         "SnapshotFrequencyDefault": 80,
-        "SnapshotOffsetDefault": 15
+        "SnapshotOffsetDefault": 15,
+        "UseUpdateMarker": true
       }
     }
   },
