--- a/test/SampleProjectStoryXTest/SampleProjectStoryXTest.csproj
+++ b/test/SampleProjectStoryXTest/SampleProjectStoryXTest.csproj
@@ -38,6 +38,7 @@
 
     <ItemGroup>
         <ProjectReference Include="..\..\samples\ESSampleProjectDependency\ESSampleProjectDependency.csproj" />
+        <ProjectReference Include="..\..\Sekiban.EventSourcing.Addon.Tenant\Sekiban.EventSourcing.Addon.Tenant.csproj" />
     </ItemGroup>
 
     <ItemGroup>
