--- a/src/Sekiban.EventSourcing.WebHelper/Sekiban.EventSourcing.WebHelper.csproj
+++ b/src/Sekiban.EventSourcing.WebHelper/Sekiban.EventSourcing.WebHelper.csproj
@@ -7,13 +7,13 @@
         <OutputType>Library</OutputType>
         <RootNamespace>Sekiban.EventSourcing.WebHelper</RootNamespace>
         <PackageId>JJ_Sekiban.EventSourcing.WebHelper</PackageId>
-        <Version>0.4.23</Version>
+        <Version>0.4.24</Version>
         <Authors>J-Tech Group</Authors>
         <Company>J-Tech-Japan</Company>
         <PackageDescription>Sekiban - Event Sourcing Framework WebHelper</PackageDescription>
         <RepositoryUrl>https://github.com/J-Tech-Japan/JJ_Sekiban</RepositoryUrl>
-        <PackageVersion>0.4.23</PackageVersion>
-        <Description>WebHelperの機能改善、UpdateMarkerを外部から行う方法に対応</Description>
+        <PackageVersion>0.4.24</PackageVersion>
+        <Description>Change Command can not produce Create Commands</Description>
     </PropertyGroup>
 
     <ItemGroup>
