ファイル位置の調整

--- a/test/SampleProjectStoryXTest/SampleProjectStoryXTest.csproj
+++ b/test/SampleProjectStoryXTest/SampleProjectStoryXTest.csproj
@@ -39,6 +39,7 @@
     <ItemGroup>
         <ProjectReference Include="..\..\samples\ESSampleProjectDependency\ESSampleProjectDependency.csproj" />
         <ProjectReference Include="..\..\Sekiban.EventSourcing.Addon.Tenant\Sekiban.EventSourcing.Addon.Tenant.csproj" />
+        <ProjectReference Include="..\..\src\Sekiban.EventSourcing.Addon.Tenant\Sekiban.EventSourcing.Addon.Tenant.csproj" />
     </ItemGroup>
 
     <ItemGroup>
