--- a/samples/CustomerDomainContext/CustomerDomainContext.csproj
+++ b/samples/CustomerDomainContext/CustomerDomainContext.csproj
@@ -7,7 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\..\Sekiban.EventSourcing.Addon.Tenant\Sekiban.EventSourcing.Addon.Tenant.csproj" />
+        <ProjectReference Include="..\..\src\Sekiban.EventSourcing.Addon.Tenant\Sekiban.EventSourcing.Addon.Tenant.csproj" />
         <ProjectReference Include="..\ESSampleProjectLib\ESSampleProjectLib.csproj" />
         <ProjectReference Include="..\..\src\Sekiban.EventSourcing\Sekiban.EventSourcing.csproj" />
     </ItemGroup>
