--- a/src/Sekiban.EventSourcing.Addon.Tenant/Sekiban.EventSourcing.Addon.Tenant.csproj
+++ b/src/Sekiban.EventSourcing.Addon.Tenant/Sekiban.EventSourcing.Addon.Tenant.csproj
@@ -16,17 +16,17 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <Folder Include="Aggregates\SekibanTenantMembers\Commands"/>
-        <Folder Include="Aggregates\SekibanTenantMembers\Events"/>
-        <Folder Include="ValueObjects"/>
+        <Folder Include="Aggregates\SekibanTenantMembers\Commands" />
+        <Folder Include="Aggregates\SekibanTenantMembers\Events" />
+        <Folder Include="ValueObjects" />
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\src\Sekiban.EventSourcing\Sekiban.EventSourcing.csproj"/>
+        <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.7.0" />
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.7.0"/>
+      <ProjectReference Include="..\Sekiban.EventSourcing\Sekiban.EventSourcing.csproj" />
     </ItemGroup>
 
 </Project>
