--- a/src/Sekiban.EventSourcing.CosmosInfrastracture/Sekiban.EventSourcing.CosmosInfrastructure.csproj
+++ b/src/Sekiban.EventSourcing.CosmosInfrastracture/Sekiban.EventSourcing.CosmosInfrastructure.csproj
@@ -6,13 +6,13 @@
         <Nullable>enable</Nullable>
         <RootNamespace>CosmosInfrastructure</RootNamespace>
         <PackageId>JJ_Sekiban.EventSourcing.CosmosInfrastructure</PackageId>
-        <Version>0.5.1</Version>
+        <Version>0.5.2</Version>
         <Authors>J-Tech Group</Authors>
         <Company>J-Tech-Japan</Company>
         <PackageDescription>Sekiban - Event Sourcing Framework CosmosInfrastructure</PackageDescription>
         <RepositoryUrl>https://github.com/J-Tech-Japan/JJ_Sekiban</RepositoryUrl>
-        <PackageVersion>0.5.1</PackageVersion>
-        <Description>コマンドの属性検証に対応する</Description>
+        <PackageVersion>0.5.2</PackageVersion>
+        <Description>コマンドの検証エラー時にSekibanValidationParameterErrorをThrowする</Description>
     </PropertyGroup>
 
     <ItemGroup>
