--- a/src/Sekiban.EventSourcing.WebHelper/Sekiban.EventSourcing.WebHelper.csproj
+++ b/src/Sekiban.EventSourcing.WebHelper/Sekiban.EventSourcing.WebHelper.csproj
@@ -7,13 +7,13 @@
         <OutputType>Library</OutputType>
         <RootNamespace>Sekiban.EventSourcing.WebHelper</RootNamespace>
         <PackageId>JJ_Sekiban.EventSourcing.WebHelper</PackageId>
-        <Version>0.5.4</Version>
+        <Version>0.5.5</Version>
         <Authors>J-Tech Group</Authors>
         <Company>J-Tech-Japan</Company>
         <PackageDescription>Sekiban - Event Sourcing Framework WebHelper</PackageDescription>
         <RepositoryUrl>https://github.com/J-Tech-Japan/JJ_Sekiban</RepositoryUrl>
-        <PackageVersion>0.5.4</PackageVersion>
-        <Description>Dependency機能の調整</Description>
+        <PackageVersion>0.5.5</PackageVersion>
+        <Description>TestでDIの設定可能にする</Description>
     </PropertyGroup>
 
     <ItemGroup>
