Library に Swashbuckleを入れる場合に、生成=falseを指定する

--- a/src/Sekiban.EventSourcing.WebHelper/Sekiban.EventSourcing.WebHelper.csproj
+++ b/src/Sekiban.EventSourcing.WebHelper/Sekiban.EventSourcing.WebHelper.csproj
@@ -15,6 +15,7 @@
         <Description>TestでDIの設定可能にする</Description>
         <TargetFrameworks>net6.0;net7.0</TargetFrameworks>
         <LangVersion>11</LangVersion>
+        <OpenApiGenerateDocuments>false</OpenApiGenerateDocuments>
     </PropertyGroup>
 
     <ItemGroup>
