リリース設定

--- a/test/SampleProjectStoryXTest/SampleProjectStoryXTest.csproj
+++ b/test/SampleProjectStoryXTest/SampleProjectStoryXTest.csproj
@@ -6,7 +6,7 @@
         <IsPackable>false</IsPackable>
 
         <LangVersion>preview</LangVersion>
-
+        <OpenApiGenerateDocuments>false</OpenApiGenerateDocuments>
         <TargetFrameworks>net6.0;net7.0</TargetFrameworks>
     </PropertyGroup>
 
@@ -40,9 +40,11 @@
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\..\samples\ESSampleProjectDependency\ESSampleProjectDependency.csproj" />
+        <ProjectReference Include="..\..\samples\CustomerDomainContext\CustomerDomainContext.csproj" />
+        <ProjectReference Include="..\..\samples\ESSampleProjectLib\ESSampleProjectLib.csproj" />
         <ProjectReference Include="..\..\src\Sekiban.EventSourcing.Addon.Tenant\Sekiban.EventSourcing.Addon.Tenant.csproj" />
         <ProjectReference Include="..\..\src\Sekiban.EventSourcing.Addon.Tenant\Sekiban.EventSourcing.Addon.Tenant.csproj" />
+        <ProjectReference Include="..\..\src\Sekiban.EventSourcing.CosmosInfrastracture\Sekiban.EventSourcing.CosmosInfrastructure.csproj" />
     </ItemGroup>
 
     <ItemGroup>
@@ -52,7 +54,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="SingleAggregates" />
+        <Folder Include="SingleAggregates" />
     </ItemGroup>
 
 </Project>
