--- a/src/Sekiban.EventSourcing.Addon.Tenant/Sekiban.EventSourcing.Addon.Tenant.csproj
+++ b/src/Sekiban.EventSourcing.Addon.Tenant/Sekiban.EventSourcing.Addon.Tenant.csproj
@@ -6,13 +6,13 @@
         <Nullable>enable</Nullable>
         <LangVersion>preview</LangVersion>
         <PackageId>JJ_Sekiban.EventSourcing.Addon.Tenant</PackageId>
-        <Version>0.6.1</Version>
+        <Version>0.6.2</Version>
         <Authors>J-Tech Group</Authors>
         <Company>J-Tech-Japan</Company>
         <PackageDescription>Sekiban - Event Sourcing Framework Tenant Addon</PackageDescription>
         <RepositoryUrl>https://github.com/J-Tech-Japan/JJ_Sekiban</RepositoryUrl>
-        <PackageVersion>0.6.1</PackageVersion>
-        <Description>複数集約プロジェクションのテスト機能を入れました。</Description>
+        <PackageVersion>0.6.2</PackageVersion>
+        <Description>QueryFilter機能を作成しました。</Description>
     </PropertyGroup>
 
     <ItemGroup>
