テスト機構の改善

--- a/CustomerDomainXTest/CustomerDomainXTest.csproj
+++ b/CustomerDomainXTest/CustomerDomainXTest.csproj
@@ -33,6 +33,15 @@
       <None Update="TestData1Result.json">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
+      <None Update="ClientContentsTestResult.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="ClientTestResult.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="ClientLoyaltyPointProjectionQueryResponse01.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
 </Project>
